--- a/package.json
+++ b/package.json
@@ -33,6 +33,12 @@
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.56.0",
     "husky": "^9.0.11",
+    "stylelint": "^16.6.1",
+    "stylelint-config-recommended-scss": "^14.0.0",
+    "stylelint-config-recommended-vue": "^1.5.0",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-config-standard-scss": "^13.1.0",
+    "stylelint-scss": "^6.3.1",
     "typescript": "^5.2.2",
     "unocss": "^0.58.5",
     "unplugin-auto-import": "^0.17.5",
