--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -4,5 +4,11 @@
     "stylelint-config-standard-scss",
     "stylelint-config-recommended-vue",
     "stylelint-config-recommended-vue/scss"
-  ]
+  ],
+  "rules": {
+    "selector-class-pattern": null,
+    "no-irregular-whitespace": true,
+    "declaration-property-value-no-unknown": true,
+    "rule-empty-line-before": null
+  }
 }
