chore: add stylint extension for vscode recommend

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
     "Vue.vscode-typescript-vue-plugin",
     "dbaeumer.vscode-eslint",
     "EditorConfig.EditorConfig",
-    "antfu.unocss"
+    "antfu.unocss",
+    "stylelint.vscode-stylelint"
   ]
 }
