--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "stylelint": "stylelint .",
-    "stylelint:fix": "stylelint . --fix",
+    "lint": "eslint --cache  .",
+    "lint:fix": "eslint --cache . --fix",
+    "stylelint": "stylelint --cache .",
+    "stylelint:fix": "stylelint --cache . --fix",
     "test": "vitest",
     "prepare": "husky",
     "commit": "cz"
@@ -50,7 +50,12 @@
     "vue-tsc": "^1.8.27"
   },
   "lint-staged": {
-    "*": "eslint --fix"
+    "*.{js,ts,tsx,vue,md}": [
+      "eslint --cache --fix"
+    ],
+    "**/*.{vue,css,scss,html}": [
+      "stylelint --cache --fix"
+    ]
   },
   "config": {
     "commitizen": {
