--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@antfu/eslint-config": "^2.6.4",
     "@commitlint/cli": "^18.6.1",
     "@commitlint/config-conventional": "^18.6.2",
+    "@iconify-json/carbon": "^1.1.36",
     "@types/node": "^20.11.19",
+    "@unocss/preset-icons": "^0.61.3",
     "@vitejs/plugin-vue": "^5.0.3",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
