--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@vue/reactivity": "^3.4.20",
     "@vue/shared": "^3.4.20",
+    "@vueuse/core": "^10.11.0",
     "axios": "^1.6.7",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.7",
